<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ad_wording">品牌赞助</string>
    <string name="app_name">Fulao2</string>
    <string name="app_name_mine">Fulao2</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="backpress_notice_main">再按一次返回键离开</string>
    <string name="backpress_notice_verify_code">"请留在此页等候验证码
离开后即无法验证"</string>
    <string name="before_days">%1$d天前</string>
    <string name="before_months">%1$d个月前</string>
    <string name="before_years">%1$d年前</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottom_tab_title_censored">有码</string>
    <string name="bottom_tab_title_discover">发现</string>
    <string name="bottom_tab_title_favorite">收藏</string>
    <string name="bottom_tab_title_me">我的</string>
    <string name="bottom_tab_title_uncensored">无码</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="brvah_app_name">Library</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="buy_vip_content">清晰画质｜高速线路｜极速缓存｜精选好片</string>
    <string name="category_empty">很抱歉，目前无相关视频</string>
    <string name="category_long_title_censored">有码</string>
    <string name="category_long_title_uncensored">无码</string>
    <string name="change_password_btn_submit">变更密码</string>
    <string name="change_password_change_success">变更成功</string>
    <string name="change_password_edit_hint_password">请输入密码(6位以上)</string>
    <string name="change_password_old_password_title">旧密码</string>
    <string name="change_password_text_forget_password"><u>忘记密码</u></string>
    <string name="change_password_text_password_confirm">确认密码</string>
    <string name="change_password_toolbar">密码变更</string>
    <string name="contract_management_current_date">有效日期</string>
    <string name="contract_management_current_name">方案名称</string>
    <string name="contract_management_current_pay_by">付款方式</string>
    <string name="contract_management_current_title">目前方案</string>
    <string name="contract_management_history_current_complaint_one">付款超过十分钟但VIP方案仍尚未开通吗？</string>
    <string name="contract_management_history_current_complaint_three">(请您截图会员帐号与交易明细并上传图片，我们将于24小时内替您开通方案)</string>
    <string name="contract_management_history_current_complaint_two">※ 欢迎使用支付申诉功能：</string>
    <string name="contract_management_history_current_complaint_two_link">" "<u>点击此处</u></string>
    <string name="contract_management_history_title">历史订单</string>
    <string name="coupon_item_exp">有效日期：</string>
    <string name="coupon_item_no_exp">无期限</string>
    <string name="coupon_item_one_day_vip_voucher">一日 VIP 体验券</string>
    <string name="coupon_item_shared_reward">分享推广回馈</string>
    <string name="coupon_item_use">使用</string>
    <string name="dialog_select_country_cn">中国+86</string>
    <string name="dialog_select_country_hk">香港+852</string>
    <string name="dialog_select_country_mo">澳门+853</string>
    <string name="dialog_select_country_negative">取消</string>
    <string name="dialog_select_country_other">其他：＋</string>
    <string name="dialog_select_country_positive">送出</string>
    <string name="dialog_select_country_title">国码选择</string>
    <string name="dialog_select_country_tw">台湾+886</string>
    <string name="favorite_expand">扩充</string>
    <string name="favorite_folder_id">收藏夹序号：%s</string>
    <string name="favorite_video_space_remaining" formatted="false">收藏空间 %d/%d</string>
    <string name="forget_password_verify_email">邮箱验证</string>
    <string name="forget_password_verify_phone">手机验证</string>
    <string name="forget_password_verify_text">为了保护您的帐号安全，变更密码前先进行安全验证！</string>
    <string name="policy_use_text1">总则</string>
    <string name="policy_use_text2">Fulao2使用条款（以下称为“本条款”），目的是明确本服务的运营方式及提高效率。在注册使用本服务之前，须在同意本条款的基础上，提交Fulao2的注册使用申请。使用本服务时，拥有Fulao2帐号的使用者（以下称为“用户”）以及包括用户在内的所有本服务的使用者（以下称为“使用者”）须同意自行承担一切责任。用户以及使用者使用本服务时,将视为同意基本使用条款及各服务的使用条款。</string>
    <string name="policy_use_text3">基本使用条款</string>
    <string name="policy_use_text4">"1.隐私权保护政策 
请查看隐私权保护政策。 
2.服务的使用 
Fulao2的注册使用申请，是以贷与使用本服务时必要的“帐号和密码”的形式成立的。但若发现用户提交的情报中有虚假内容丶或经Fulao2判断属于不正当使用Fulao2时，即使在许可发出后，也可立即撤销。另外，若认为Fulao2被不当使用时，无义务将此情况告知用户。 
・通知和联络 
Fulao2将透过Fulao2 App丶网站或电子邮件等Fulao2认为合适的方式向用户发送各种必要情报。此时Fulao2将使用用户的申请资料（包含在用户同意后经第三方提交至Fulao2的资料）。如果该情报透过Fulao2 App丶网站或电子邮件进行发布，则当刊登至网站上或电子邮件发送后起，立即生效。用户不可拒绝接受Fulao2发送的电子邮件，若用户变更联络用电子邮件后，须立即办理变更手续。原则上，Fulao2不接受电话，传真或来访等联络方式。当Fulao2向用户发送需要用户回答的邮件时，用户必须在指定期限内向Fulao2作出答覆。如果Fulao2无法确认收到用户的答覆邮件，将有可能冻结·删除用户帐户。 
・登录电子邮件丶帐号和密码 
用户有责任管理“登录电子邮件丶帐号和密码”，并须同意当出现因作业失误或被第三方所引起的不当使用，Fulao2不承担任何责任。 Fulao2对用户登录电子邮件丶帐号和密码无再次发行的义务。 
・权利的转让和出售 
未经Fulao2的许可，用户不得擅自将Fulao2以及本服务的权利转让丶出售或租借给第三方,不得做出对Fulao2有任何损失之事。 
・通讯 
使用Fulao2时，需接入互联网。用户需自行准备通讯方式，进行适当设置和作业，并承担相关费用。关于接入互联网之前的准备丶方法等，一律与Fulao2无关。 
・通讯量和使用范围 
关于用户透过本服务可收发的通讯量，另外关于使用本服务时可利用的保存领域丶保存容量，当Fulao2未作出明确说明时，用户须同意Fulao2可根据自己的决定对此设定一定上限。 
・用户保存的作品 
用户对透过本服务可访问的所有内容（以下称为“内容”）所制作的用户自己的作品，拥有著作权及其他权利。对于用户透过本服务所制作的作品，Fulao2可有权无条件地进行编辑丶翻译丶出版丶现场演示丶展示丶宣传丶发布以及一切相关事宜。此为Fulao2在运营本服务时不可缺少的权利，用户须予以同意。 
・第三方所提供内容 
用户及使用者在使用本服务时利用丶购买或下载由第三方个人或企业所提供的服务丶商品或软体时，在用户及使用者和相关第三方个人或企业之间，将适用不同于本条款的独立合同条件。另外，在法律上上述独立合同条件不受本条款的约束。 
3.禁止事项 
在使用本服务时，严禁以下行为或是经Fulao2判断符合以下的行为。若有以下行为发生，将无告知地停止其使用的一切服务丶或是采取法律途径丶或是同时因此不当行为给Fulao2或第三方造成的损失由该用户及使用者赔偿。 
4.关于著作权详细事项 
・违反本条款之行为 
・侵害其他使用者或第三方的信用或名誉，又或是侵害他人隐私权丶肖像权和其他一切正当权利之行为 
・侵犯其他用户或第三方的专利权丶商标权丶著作权丶商业秘密等智慧财产权之行为 
・刊登与法律相抵触的内容，以及有伤害丶自杀丶窃盗丶使用和贩卖违法药物等违法行为，以及对危险药物的使用和贩卖有劝诱或助长的行为 
・与地方的丶地区的丶国家的丶国际的法律特别是和美国法律相抵触之行为 
・违反社会道德丶公序良俗之行为或言论。向其他使用者或第三方公开或协助公开猥亵的影像丶声音或文字等之行为 
・干扰或妨碍本服务的提供丶运作及其他用户使用本服务之行为，以及支持或助长该行为的行为 
・可能发展为纠纷的对其他个人丶特定团体丶统治机关丶国家丶产品丶政治体制丶信仰丶思想丶主义丶民族丶宗教丶人种丶性别等进行诽谤中伤丶损害名誉及信用的行为以及助长该行为之行为 
・以其他个人丶公司丶营业组织的名义，无根据地冒称与其他个人丶公司或组织等有商务合作或协作关系之行为 
・伪装成Fulao2丶内容提供者丶经营者或第三人之行为 
・肆意发布丶刊登损害Fulao2及Fulao2的合作伙伴的信用·信誉之行为 
・给Fulao2伺服器造成额外负担的行为，及对Fulao2或他人的电脑软体丶硬体的功能进行妨害丶损坏丶限制等，以及与其有关的支持或助长等行为 
・连续发布相同内容丶发送垃圾讯息或刷版等行为 
・任何损害未成年人的身心健康之行为(散布刊登儿童色情丶儿童卖淫丶兽奸丶暴力的文章丶图片等)，以及与其有关的支持或助长的行为 
・在多数人可能浏览的状态下刊登对犯罪或与犯罪相关行为的预告丶或者可能性较高的情报之行为 
・将本服务作为传播媒体，从事抵触法令法规的行为以及商业活动之行为 
・恶劣的商业行为丶过度宣传或是劝诱参与宗教之行为 
・设立丶劝诱非法传销之行为 
・将本服务出售给第三方之行为 
・因使用可能大量接入本服务的软体丶程式，大肆申请丶更新丶使用服务，而妨害本服务正常运营之行为 
・对于本服务的内容和资料有任意取得丶录影丶覆制丶窜改丶发布丶公开等行为，以及有使用丶介绍丶教唆可以助长上述行为的工具或手段之行为 
・使用覆数帐号的不正当注册丶使用，而妨害本服务正常运营之行为 
・不正当使用或是趁系统故障时，与禁止事项相互抵触之行为丶或是因不正当使用等原因造成Fulao2有所损失之行为 
・删除丶隐藏Fulao2的广告空间，以及变更广告的刊登位置丶配色丶尺寸丶广告显示代码之行为 
・其他，Fulao2根据合理的理由认为是不适当行为之行为用户以及使用者不得将类似禁止事项内容作为本服务的文本丶图片丶音乐或影像等进行公开。另外，即时设定为非公开状态或限定公开状态，但只要出现在Fulao2所管理运营的伺服器中时，即被认为是属于禁止事项。 
Fulao2有权判断用户的行为是否属于禁止事项 
使用付费服务及点数时的注意事项 
用户如有违反行为发生时,将会冻结或是删除注册的付费服务帐号,而付费服务的合约也会同时失效。即使合约未到期，剩余期间的金额将不予退还。另外,用户所持有的点数也不予退费。 
5.年龄限制的内容 
・本服务中含有仅限成人观看的设定有年龄限制的内容（以下称为“成人内容”）的网页。本服务中的成人区所提供的服务并不保证含有性内容。 
成人内容的使用条件 
・本服务的成人内容是指，允许满18岁以上用户浏览，禁止未满18岁用户浏览的内容 
・成人内容仅限于公开在本服务的成人区中。 
・未满18岁或无法证明为18岁以上者的演出者丶被拍摄对象或模特等的成人内容,将不得在本服务中公开。 
6.免责事项 
Fulao2对以下各项不承担任何责任。 
・用户对用户自己在本服务上所制作的内容（以下称为“用户内容”）承担一切法律丶赔偿责任以及诉讼费用，另外，若不慎刊登有包括违反法律丶法令丶条例的内容，以及对他人的诽谤中伤丶骚扰丶智慧财产权的侵害丶个人隐私的侵害丶违反公序良俗的内容等时，须承担将其立即删除的义务。 Fulao2不对用户内容进行担保，另外不对使用者及第三方承担任何责任。 
・关于服务的持续提供，无法做出任何保证。服务有会突然中止，或免费服务变为付费服务的情况。 （我方将不断努力但由于种种原因也有无法实现的情况。）另外，也有无预告的拒绝个别使用的情况。即便是第三方透过本服务来提供内容的情况也一样。请在同意的基础上使用。 
・因使用本服务所引起的任何纠纷，一律与Fulao2无关。内容的管理责任由用户承担，故对因使用本服务或访问用户内容给用户造成的损失不承担任何赔偿责任。特别是当经营与信息买卖相关的网站时，用户须对使用者明确责任关系。请由用户及使用者间的当事人完全防止和解决问题。 
・基于本条款，Fulao2没有义务监视或删除用户内容。发布在用户内容的所有情报都将由用户本人承担一切管理责任，若因某些未能删除的情报而给用户或第三人带来损害时，Fulao2不承担任何责任。 
・经Fulao2的判断，该网站内容妨碍了其他用户时，将无警告的立即冻结和删除帐号或用户内容。 
・系统故障丶档案受损等原因造成资料损失时,Fulao2将不负任何一切责任。用户相关的资料请用户自行备分存档。 Fulao2不保证所有用户相关资料的安全性。 
・ 未经许可的情况下，Fulao2不会将用户及使用者通过网络向Fulao2提供的地址・姓名・邮件地址・电话号码・传真号码等个人情报公开给第三方。但是，不包括下列情况： 
1.来自法院・警察署等公共机关因法令或依司法行政机关之命令时。 
2.出现危及到人身生命财产等紧急必要的情况时。 
3.为提供使用者所需的服务项目，而不得不向他人或公司公开或共有用户个人情报时。 
4.将使用者的资料提供给Fulao2委托的业务公司，以便使其向使用者提供所需的服务时。 （此类公司使用Fulao2所提供的个人情报时不得超过以上目的的必要限度。） 
5.用户及使用者在Fulao2网站上的行为违反了Fulao2的使用条款，为了保护Fulao2的权利・财产以及保障各项服务的正常运作时。 
6.用户及使用者在Fulao2网站上的行为违反了Fulao2的使用条款，侵害第三方权利丶财产丶各项服务,为了保护第三方的权利・财产以及保障各项服务的正常运作时。 
7.用户及使用者在Fulao2网站上的行为,对于Fulao2的SEO丶Fulao2服务品质低下的预防及恢覆时。 
・当从本服务内的内容及用户内容访问外部情报时，若因用户及使用者对此外部情报的安全性丶完整性丶正确性的信任而导致任何损失或损害，Fulao2不负任何责任，且用户及使用者须对此了解并同意。 
・当在本服务中由用户所制作丶销售的内容违反使用条款时，Fulao2将对此内容进行冻结，并不对购买者承担任何货款退还责任。 
・Fulao2对使用丶未使用或无法使用本服务而给用户及使用造成的损失或损害不负任何责任。 
・本服务是Fulao2经由美国内的设备进行管理及提供。 Fulao2无法表明对于本服务在美国以外国家使用的适当性丶或是本服务使用的可能性。用户从其他司法区域登入使用时,请遵守您所在国家之相关法律,并且请自行承担一切责任。 
7.服务内容的停止与终止 
Fulao2有权在不另外告知用户的情况下，变更本服务的系统等。 
我公司有权因保养作业丶系统修覆丶停电以及自然灾害，或者其他不可抗力之理由，暂停或终止本服务的提供。此时，除发生紧急情况之外，我们会尽量做到事前告知。 
我公司有权独自判断以及随时修改本服务的有关内容。并且有权随时暂停或终止一部分或者全部服务项目的提供。本服务终止或者取消后，我公司有权将我公司或者我公司委托的第三方的伺服器中保存的投稿以及其他情报依据我公司的判断，进行删除。 
本服务中途终止时,不管终止原因为何,Fulao2对于用户以及使用者不负赔偿责任。 
8.保证的限度 
・Fulao2会尽最大努力使本服务的运作丶使用及使用结果等随时保持在稳定状态，可是不能保证作业系统的稳定。本公司不保证以下事项。 
・本服务永无停止或无终止的运作。 
・当本服务发生某些问题或缺陷时，随时修覆并使其恢覆原状。 
・本服务可完全杜绝电脑病毒等破坏因素。 
・为保证1或3而提供安全保护措施。 
9.不可抗力 
由于天灾丶火灾丶攻击丶洪水丶病疫丶暴动或者战争等，以及除此之外超越双方当事人管理范围而无法履行本条款时，任何一方当事人对于延缓履行或无法履行本条款义务之事均不负任何责任。 
10.纠纷处理 
・本条款适用于美国内华达州州法。 
・由于使用本服务而发生的一切纠纷丶控诉等都依照美国内华达州承认的仲裁手续进行解决。 
・经过仲裁尚未能解决的纠纷丶控诉等将依审判解决。此时丶美国内华达州地方法院将成为第一审专属管辖法院。 
・有关仲裁丶审判的律师费用均由各当事人承担。 
・即使在本条款的各项内容经法院认定无效或者无法履行的情况之下，除该项以外的各项内容仍应完全有效并且适用。 
11.关于广告的显示 
本服务中刊登的广告・宣传等，应由广告主与使用者之间进行责任协商。 Fulao2对于因本服务中刊登的广告而造成直接或间接的损害不承担一切责任。 
Fulao2对于广告栏及广告的显示位置丶显示期间等，会无预告地进行变更。用户及使用者须对此了解并同意。 
12.条款及条件的变更 
Fulao2有权不经用户及使用者同意，随时变更本条款内容丶修订。 
修改后的条款将从公布在本公司网站上时起立即生效适用。 
只要在使用Fulao2期间，须总是同意最新修改后的条款。 
13.退款与退货条款 
关于Fulao2的使用费用以及支付方式，除本条款之外，还应以其他显示于Fulao2网站上的由Fulao2所制定的付费标准为准。 
关于购买的手续费丶税金和初期费用等由用户自行承担。 
如果Fulao2在指定的日期内未能确认伴随开始使用以及继续使用服务而发生合同更新所需费用的付款时，将认为用户无更新继续使用之意，并且终止合同。 
即使Fulao2未能从信用卡公司或其代理店收到使用费用时，用户须同意承担对Fulao2全额支付Fulao2所要求的金额的义务。 
允许使用用户所指定的信用卡付款（即Fulao2接受信用卡公司的垫付）的许可，不仅指此次许可的付款，而视为只要在信用卡有效期内，允许使用此信用卡支付与Fulao2所订立的付费服务合同期间所有的费用（到用户取消Fulao2付费服务丶解除合同丶Fulao2完成付费服务的终止手续为止），且不同意此条款的用户不可使用信用卡付款。 
Fulao2可在不得到用户许可的情况下修改付费标准丶付费服务内容等，且视为用户对此表示同意。另外，修改后的付费标准将于付费服务合同更新时开始适用。 
如果用户在超过规定的日期未能偿还根据本条款的规定以及各项服务中对Fulao2的债务时，须向Fulao2支付自期限日的第二天起至偿还日期间的由Fulao2所规定的延期赔偿金。仅可以Fulao2所制定的方法进行付款，因以Fulao2所指定的支付方法之外的方法进行付款或有其他用户的原因所造成的损失Fulao2不承担任何责任。 
用户须同意不可更改付费服务的合约期间，无论因为何种原因，点数购入后或是购买付费会员后皆不可要求退款。 
当收到来自信用卡公司的退款申请时，将停止该帐号的使用。"</string>
</resources>