<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:id="@id/ll_item_coupon" android:background="@drawable/coupon_item_shape" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/coupon_item_container_rv" android:background="@drawable/bg_coupon_available" android:layout_width="250.0dip" android:layout_height="90.0dip">
        <TextView android:textSize="18.0sp" android:textColor="@color/pure_white" android:gravity="center_horizontal" android:id="@id/coupon_item_main_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/coupon_item_shared_reward" android:lineSpacingExtra="2.0sp" android:layout_marginStart="16.0dip" />
        <TextView android:textSize="10.0sp" android:textColor="@color/pure_white" android:gravity="center_horizontal" android:id="@id/coupon_item_sub_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/coupon_item_one_day_vip_voucher" android:layout_below="@id/coupon_item_main_title" android:layout_marginStart="16.0dip" />
        <ImageView android:id="@id/shape_dotted_line" android:layout_width="fill_parent" android:layout_height="2.0dip" android:src="@drawable/shape_dotted_line_white" android:layout_above="@id/ll_coupon_container_bottom_info" android:layout_centerHorizontal="true" android:layerType="software" android:layout_marginStart="@dimen/dp_10" android:layout_marginEnd="@dimen/dp_10" />
        <RelativeLayout android:id="@id/ll_coupon_container_bottom_info" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
            <TextView android:textSize="10.0sp" android:textColor="@color/pure_white" android:id="@id/coupon_item_use_button_amount" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="10.0sp" android:textColor="@color/pure_white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/coupon_item_exp" android:layout_toStartOf="@id/coupon_item_exp_date" />
            <TextView android:textSize="10.0sp" android:textColor="@color/pure_white" android:layout_gravity="end" android:id="@id/coupon_item_exp_date" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/coupon_item_no_exp" android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout android:id="@id/coupon_item_use_button_rl" android:background="@drawable/bg_coupon_button_available_normal" android:layout_width="90.0dip" android:layout_height="90.0dip">
        <TextView android:textSize="18.0sp" android:textColor="@color/pure_white" android:id="@id/coupon_item_use_button_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/coupon_item_use" android:layout_centerInParent="true" />
    </RelativeLayout>
</LinearLayout>