<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/layout_toolbar" layout="@layout/toolbar_general" />
    <TextView android:textSize="14.0sp" android:textColor="@color/item_title_gray" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" android:text="@string/forget_password_verify_text" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" />
    <TextView android:textSize="16.0sp" android:textColor="@color/pure_white" android:gravity="center" android:id="@id/tv_verify_email" android:background="@drawable/selector_red_curved" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/forget_password_verify_email" android:layout_marginStart="@dimen/dp_10" android:layout_marginEnd="@dimen/dp_10" />
    <TextView android:textSize="16.0sp" android:textColor="@color/pure_white" android:gravity="center" android:id="@id/tv_verify_phone" android:background="@drawable/selector_red_curved" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/forget_password_verify_phone" android:layout_marginStart="@dimen/dp_10" android:layout_marginEnd="@dimen/dp_10" />
</LinearLayout>