<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/shape_white_curved" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="20.0sp" android:textColor="@color/dialog_adult_text_title_gray" android:id="@id/text_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="30.0dip" android:text="@string/dialog_select_country_title" android:layout_marginStart="30.0dip" android:layout_marginEnd="30.0dip" />
    <RelativeLayout android:id="@id/layout_cn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="30.0dip" android:layout_marginStart="30.0dip" android:layout_marginEnd="30.0dip">
        <TextView android:textSize="16.0sp" android:textColor="@color/dialog_adult_text_message_gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_select_country_cn" android:layout_centerVertical="true" />
        <RadioButton android:id="@id/radio_cn" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/layout_hk" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="30.0dip" android:layout_marginStart="30.0dip" android:layout_marginEnd="30.0dip">
        <TextView android:textSize="16.0sp" android:textColor="@color/dialog_adult_text_message_gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_select_country_hk" android:layout_centerVertical="true" />
        <RadioButton android:id="@id/radio_hk" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/layout_mo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="30.0dip" android:layout_marginStart="30.0dip" android:layout_marginEnd="30.0dip">
        <TextView android:textSize="16.0sp" android:textColor="@color/dialog_adult_text_message_gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_select_country_mo" android:layout_centerVertical="true" />
        <RadioButton android:id="@id/radio_mo" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/layout_tw" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="30.0dip" android:layout_marginStart="30.0dip" android:layout_marginEnd="30.0dip">
        <TextView android:textSize="16.0sp" android:textColor="@color/dialog_adult_text_message_gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_select_country_tw" android:layout_centerVertical="true" />
        <RadioButton android:id="@id/radio_tw" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="30.0dip" android:layout_marginStart="30.0dip" android:layout_marginEnd="30.0dip">
        <TextView android:textSize="16.0sp" android:textColor="@color/dialog_adult_text_message_gray" android:id="@id/text_other" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_select_country_other" android:layout_centerVertical="true" />
        <androidx.appcompat.widget.AppCompatEditText android:textSize="12.0sp" android:textColor="@color/pure_black" android:id="@id/edit_other" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerVertical="true" android:inputType="number" android:textCursorDrawable="@drawable/shape_grey" android:layout_marginStart="5.0dip" android:layout_toEndOf="@id/text_other" app:background="@color/general_gray" />
    </RelativeLayout>
    <View android:background="@color/dialog_adult_line_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="20.0dip" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="50.0dip">
        <RelativeLayout android:id="@id/layout_exit" android:background="@drawable/selector_dialog_left" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_toLeftOf="@id/line">
            <TextView android:textSize="14.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_select_country_negative" android:layout_centerInParent="true" />
        </RelativeLayout>
        <View android:id="@id/line" android:background="@color/dialog_adult_line_gray" android:layout_width="1.0dip" android:layout_height="50.0dip" android:layout_marginTop="10.0dip" android:layout_centerInParent="true" />
        <RelativeLayout android:id="@id/layout_ok" android:background="@drawable/selector_dialog_right" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_toEndOf="@id/line">
            <TextView android:textSize="14.0sp" android:textColor="@color/dialog_adult_text_ok_red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_select_country_positive" android:layout_centerInParent="true" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>