<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/ll_contract_management" android:background="@drawable/shape_red_gradient" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/layout_toolbar"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10" android:layout_marginBottom="@dimen/dp_10" app:cardCornerRadius="12.0dip" app:elevation="10.0dip">
        <LinearLayout android:orientation="vertical" android:id="@id/ll_current" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="@dimen/dp_4">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:textColor="@color/item_text_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/contract_management_current_title" android:layout_marginStart="10.0dip" />
                <TextView android:textSize="16.0sp" android:textColor="@color/order_text_green" android:id="@id/tv_current_active" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginEnd="10.0dip" android:layout_alignParentEnd="true" />
            </RelativeLayout>
            <View android:background="@color/demarcation_grey" android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_marginTop="14.0dip" android:layout_marginStart="@dimen/dp_10" android:layout_marginEnd="@dimen/dp_10" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip">
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="12.0sp" android:textColor="@color/item_title_gray" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_current_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/contract_management_current_name" />
                    <TextView android:textSize="16.0sp" android:textColor="@color/pure_black" android:layout_gravity="center" android:id="@id/tv_current_order" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="12.0sp" android:textColor="@color/item_title_gray" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:layout_marginBottom="10.0dip" android:text="@string/contract_management_current_date" android:layout_marginStart="@dimen/dp_10" android:layout_marginEnd="@dimen/dp_10" />
                    <TextView android:textSize="16.0sp" android:textColor="@color/pure_black" android:layout_gravity="center" android:id="@id/tv_current_date" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:layout_marginBottom="10.0dip" android:layout_marginStart="@dimen/dp_10" android:layout_marginEnd="@dimen/dp_10" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="12.0sp" android:textColor="@color/item_title_gray" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:layout_marginBottom="10.0dip" android:text="@string/contract_management_current_pay_by" android:layout_marginStart="@dimen/dp_10" android:layout_marginEnd="@dimen/dp_10" />
                    <TextView android:textSize="16.0sp" android:textColor="@color/pure_black" android:layout_gravity="center" android:id="@id/tv_current_pay_by" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:layout_marginBottom="10.0dip" android:layout_marginStart="@dimen/dp_10" android:layout_marginEnd="@dimen/dp_10" />
                </LinearLayout>
                <TextView android:textSize="14.0sp" android:textColor="@color/general_red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="22.0dip" android:layout_marginBottom="10.0dip" android:text="@string/contract_management_history_current_complaint_one" android:layout_marginStart="@dimen/dp_10" android:layout_marginEnd="@dimen/dp_10" />
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:layout_marginStart="@dimen/dp_10" android:layout_marginEnd="@dimen/dp_10">
                    <TextView android:textSize="16.0sp" android:textColor="@color/general_blue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/contract_management_history_current_complaint_two" />
                    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/general_blue" android:id="@id/tv_current_complaint_link" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/contract_management_history_current_complaint_two_link" />
                </LinearLayout>
                <TextView android:textSize="14.0sp" android:textColor="@color/pure_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/contract_management_history_current_complaint_three" android:layout_marginStart="@dimen/dp_10" android:layout_marginEnd="@dimen/dp_10" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout android:orientation="vertical" android:id="@id/ll_history" android:background="@drawable/shape_white_top_curved" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
            <TextView android:textSize="16.0sp" android:textColor="@color/item_text_black" android:id="@id/history_order_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/contract_management_history_title" />
            <View android:background="@color/demarcation_grey" android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_marginTop="14.0dip" android:layout_below="@id/history_order_title" android:layout_marginStart="@dimen/dp_10" android:layout_marginEnd="@dimen/dp_10" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>